0.004
	- add support for getting a subimage of the window
	- include the interface header in the implementations so we
	  get errors when they don't match (doh!)
	- return something from the X11 error handler
	- add X11/Xutil.h include for XDestroyImage()
	- handle the default (no id or hwnd) case correctly

0.003 12 Jan 2007
	- 0.003 release
	- ignore some VC++ generated junk in MANIFEST.SKIP
	- avoid some Makefile.PL warnings
	- use Imager in Makefile.PL since I'd prefer to error on that
	  rather than Imager::ExtUtils
	- work around Debian strangeness
	- the x11 capture wasn't releasing the XImage or the line
	  and color buffers.
	- x11_open() incorrectly reset the error handler to junk
	- Makefile.PL was checking /usr/X11R6 for headers instead of 
	  /usr/X11R6/include
	- add header directories as -I flags if we find a header in
	  them
	- avoid duplicate -L flags

0.002 2 Jan 2007
	Just packaging changes:
	- README was missing
	- updated my EU::MM and I now set the LICENSE key so it's set
	  in META.yml

0.001 1 Jan 2007
	- Initial release with X11 and Win32 support