@@ -264,6 +264,44 @@ Closes a display returned by Imager::Screenshot::x11_open().
 
 =back
 
+=head1 TAGS
+
+screenshot() sets a number of tags in the images it returns, these are:
+
+=over
+
+=item *
+
+ss_left - the distance between the left side of the window and the
+left side of the captured area.  The same value as the I<left>
+parameter when that is positive.
+
+=item *
+
+ss_top - the distance between the top side of the window the top side
+of the captured area.  The same value at the I<top> parameter when
+that is positive.
+
+=item *
+
+ss_window_width - the full width of the window.
+
+=item *
+
+ss_window_height - the full height of the window.
+
+=item *
+
+ss_type - the type of capture done, either "Win32" or "X11".
+
+=back
+
+To cheaply get the window size you can capture a single pixel:
+
+  my $im = screenshot(right => 1, bottom => 1);
+  my $window_width  = $im->tags(name => 'ss_window_width');
+  my $window_height = $im->tags(name => 'ss_window_height');
+
 =head1 CAVEATS
 
 It's possible to have more than one grab driver available, for
@@ -274,8 +312,10 @@ Under Win32, if there's a screesaver running, then you grab the
 results of the screensaver.
 
 Grabbing the root window on a rootless server (eg. Cygwin/X) may not
-grab the background.  In fact, when I tested under Cygwin/X I got the
-xterm window contents even when the Windows screensaver was running.
+grab the background that you see.  In fact, when I tested under
+Cygwin/X I got the xterm window contents even when the Windows
+screensaver was running.  The root window captured appeared to be that
+generated by my window manager.
 
 =head1 LICENSE
 
